--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/website-vue/favicon.ico" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3 Vite Preview</title>
-  <script type="module" crossorigin src="/website-vue/assets/index.5ffdec75.js"></script>
-  <link rel="modulepreload" href="/website-vue/assets/vendor.2a1cf612.js">
+    <title>sYamaz - vue</title>
+  <script type="module" crossorigin src="/website-vue/assets/index.bd63d8ef.js"></script>
+  <link rel="modulepreload" href="/website-vue/assets/vendor.34cbefdc.js">
   <link rel="stylesheet" href="/website-vue/assets/vendor.bc18df24.css">
   <link rel="stylesheet" href="/website-vue/assets/index.46072a37.css">
 </head>
